# task-processing-system

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  rabbitmq.conf
common/: constants.py
common/applications/use_case/consumer/: task_processing.py
common/applications/use_case/web_api/: task_create.py
common/domain/: models.py
common/domain/repo/: task_repo.py
common/domain/services/: consume_queue_service.py  prometheus_service.py  send_to_queue_service.py  task_cancellation_cache.py
common/infrastructure/: database.py  db_schema.py  dependencies.py
common/infrastructure/repo/: task_repo.py
common/infrastructure/services/: consume_queue_service.py  prometheus_service.py  send_to_queue_service.py  task_cancellation_cache.py
consumer/: main.py
grafana-configs/: ConsumerSuccess-1731396473547.json
migrations/: env.py
migrations/versions/: 24757941f6cc_0001_create_task_table.py  54430a7a23c1_0002_add_task_timestamp_fields.py
tests/: conftest.py
tests/common/applications/use_case/consumer/: test_task_processing.py
tests/common/applications/use_case/web_api/: test_task_create.py
tests/e2e/: test_happy_path.py
tests/performance/: locustfile.py
tests/web_api/routers/: test_tasks_router.py
web_api/: exception_handler.py  main.py
web_api/domain/: models.py
web_api/routers/: tasks.py
