[tool.poetry]
name = "consumer"
version = "0.1.0"
description = "Task Processing System"
authors = ["icycandle <icycandle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
aio-pika = "^9.4.3"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pytest-mock = "^3.14.0"
prometheus-client = "^0.21.0"
redis = "^5.2.0"




[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
locust = "^2.32.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
